src/test/ui/regions/regions-variance-invariant-use-covariant.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-variance-invariant-use-covariant.rs:27:9
   |
LL | fn use_<'b>(c: Invariant<'b>) {
   |         -- lifetime `'b` defined here
...
LL |     let _: Invariant<'static> = c; //~ ERROR mismatched types
   |         ^ type annotation requires that `'b` must outlive `'static`

error: aborting due to previous error

